--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <!-- Add Firebase products that you want to use -->
   <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-firestore.js"></script>
+ 
 
   <div class="body">
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -45,7 +46,8 @@
     </div>
     
     <div id="map"></div>
-
+    
+    <script src="./src/formHandler.js"></script>
     <script src="./src/firebase.js"></script>
     <script src="./src/map.js"></script>
 
